<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/vs_960"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_dialog_bg_main"
        android:orientation="vertical"
        android:paddingLeft="@dimen/vs_30"
        android:paddingTop="@dimen/vs_20"
        android:paddingRight="@dimen/vs_30"
        android:paddingBottom="@dimen/vs_30">

        <!-- 标题 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_repository"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/ts_26"
            android:textStyle="bold" />

        <!-- 原仓库链接 -->
        <LinearLayout
            android:id="@+id/llOriginalRepo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_50"
            android:layout_marginTop="@dimen/vs_5"
            android:layout_marginBottom="@dimen/vs_5"
            android:background="@drawable/button_dialog_vod"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_20"
            android:paddingRight="@dimen/vs_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_repo_original_repository"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vs_10"
                android:layout_marginLeft="@dimen/vs_10"
                android:text=">"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_24" />
        </LinearLayout>

        <!-- Takagen99仓库链接 -->
        <LinearLayout
            android:id="@+id/llTakagenRepo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_50"
            android:layout_marginTop="@dimen/vs_5"
            android:layout_marginBottom="@dimen/vs_5"
            android:background="@drawable/button_dialog_vod"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_20"
            android:paddingRight="@dimen/vs_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_repo_takagen99"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vs_10"
                android:layout_marginLeft="@dimen/vs_10"
                android:text=">"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_24" />
        </LinearLayout>

        <!-- 二开仓库链接 -->
        <LinearLayout
            android:id="@+id/llMyRepo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vs_50"
            android:layout_marginTop="@dimen/vs_5"
            android:layout_marginBottom="@dimen/vs_20"
            android:background="@drawable/button_dialog_vod"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/vs_20"
            android:paddingRight="@dimen/vs_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_repo_my"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vs_10"
                android:layout_marginLeft="@dimen/vs_10"
                android:text=">"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_24" />
        </LinearLayout>

        <!-- 关闭按钮 -->
        <LinearLayout
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/vs_5"
            android:background="@drawable/button_dialog_main"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/vs_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/ts_22" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
